--- a/wp-content/themes/lw_expert_inv/style.css
+++ b/wp-content/themes/lw_expert_inv/style.css
@@ -3431,12 +3431,6 @@ article.comment {
   .content-right {display: none;}
 }
 
-@media screen and (min-width: 992px) {
-  .right-side-wrap .content-right {
-    top: 410px!important;
-  }
-}
-
 #savepostform {
   display: block;
 }
